--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> About</a></li><li class="chapter-item expanded "><a href="stats/index.html"><strong aria-hidden="true">2.</strong> fortsa stats</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="stats/acf.html"><strong aria-hidden="true">2.1.</strong> acf</a></li><li class="chapter-item expanded "><a href="stats/pacf.html"><strong aria-hidden="true">2.2.</strong> pacf</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> About</a></li><li class="chapter-item expanded "><a href="stats/index.html"><strong aria-hidden="true">2.</strong> fortsa stats</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="stats/acf.html"><strong aria-hidden="true">2.1.</strong> acf</a></li><li class="chapter-item expanded "><a href="stats/pacf.html"><strong aria-hidden="true">2.2.</strong> pacf</a></li></ol></li><li class="chapter-item expanded "><a href="model/index.html"><strong aria-hidden="true">3.</strong> fortsa model</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -153,15 +153,18 @@
 <h2 id="a-univariate-time-series-analysis-and-arima-modeling-package-in-fortran"><a class="header" href="#a-univariate-time-series-analysis-and-arima-modeling-package-in-fortran">A Univariate Time Series Analysis and ARIMA Modeling Package in Fortran</a></h2>
 <p><code>ForTSA</code> is a Fortran software package for univariate time series analysis, which is base on <a href="https://github.com/rafat/ctsa">rafat/CTSA</a>.<br />
 <code>CTSA</code> is a C software package for univariate time series analysis. </p>
+<div align="center">
+<img src="./media/logo.png" alt="ForTSA" width="220">
+</div>
 <table><thead><tr><th align="center">Item</th><th align="center">Info</th></tr></thead><tbody>
-<tr><td align="center"><strong>Version:</strong></td><td align="center">0.0.2</td></tr>
+<tr><td align="center"><strong>Version:</strong></td><td align="center">0.0.3</td></tr>
 <tr><td align="center"><strong>Author:</strong></td><td align="center"><code>ForTSA</code> Contributors</td></tr>
 <tr><td align="center"><strong>Web site:</strong></td><td align="center">https://github.com/zoziha/fortsa</td></tr>
 <tr><td align="center"><strong>API-Doc Web site:</strong></td><td align="center">https://zoziha.github.io/fortsa/</td></tr>
 <tr><td align="center"><strong>License:</strong></td><td align="center"><em><code>ForTSA</code></em> is released under BSD-3.</td></tr>
 </tbody></table>
-<h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
-<pre><code class="language-bash">git clone https://github.com/zoziha/fortsa.git
+<h2 id="get-started"><a class="header" href="#get-started">Get Started</a></h2>
+<pre><code class="language-sh">git clone https://github.com/zoziha/fortsa.git
 cd fortsa
 </code></pre>
 <h2 id="dependencies"><a class="header" href="#dependencies">Dependencies</a></h2>
@@ -176,9 +179,9 @@ cd fortsa
 <tr><td align="center">GCC Fortran</td><td align="center">10</td><td align="center">Ubuntu</td><td align="center">x86_64</td></tr>
 </tbody></table>
 <h3 id="build-with-a-hrefhttpsgithubcomfortran-langfpmfortran-langfpma"><a class="header" href="#build-with-a-hrefhttpsgithubcomfortran-langfpmfortran-langfpma">Build with <a href="https://github.com/fortran-lang/fpm">fortran-lang/fpm</a></a></h3>
-<p>Fortran Package Manager (fpm) is a package manager and build system for Fortran.<br />
+<p>Fortran Package Manager (fpm) is a package manager and build system for Fortran.<br>
 You can build using provided <code>fpm.toml</code>:</p>
-<pre><code class="language-bash">fpm test --list
+<pre><code class="language-sh">fpm test --list
 fpm test &lt;test_name, see `fpm.toml` or test list&gt;
 </code></pre>
 <p>To use <code>ForTSA</code> within your fpm project, add the following to <code>fpm.toml</code> file:</p>
@@ -208,313 +211,6 @@ For <code>Fortran</code> routines, contact zuo.zhihua@qq.com.</p>
 <li><a href="https://github.com/zoziha/forlab">zoziha/forlab</a></li>
 <li><a href="https://toml.io/en/">toml</a></li>
 </ol>
-<h2 id="ctsa-api"><a class="header" href="#ctsa-api">CTSA-API</a></h2>
-<pre><code class="language-c">/*
-* arma.h
-*
-*  Created on: Sep 11, 2014
-*      Author: Rafat Hussain
-*/
-
-#ifndef CTSA_H_
-#define CTSA_H_
-
-#ifdef __cplusplus
-extern &quot;C&quot; {
-#endif
-
-typedef struct auto_arima_set* auto_arima_object;
-
-auto_arima_object auto_arima_init(int *pdqmax,int *PDQmax,int s, int r, int N);
-
-struct auto_arima_set{
-	int N;// length of time series
-	int Nused;//length of time series after differencing, Nused = N - d
-	int method;
-	int optmethod;
-	int pmax;// Maximum size of phi
-	int dmax;// Maximum Number of times the series is to be differenced
-	int qmax;// Maximum size of theta
-	int Pmax;//Maximum Size of seasonal phi
-	int Dmax;// Maximum number of times the seasonal series is to be differenced
-	int Qmax;//Maximum size of Seasonal Theta
-	int p;// size of phi
-	int d;// Number of times the series is to be differenced
-	int q;//size of theta
-	int s;// Seasonality/Period
-	int P;//Size of seasonal phi
-	int D;// The number of times the seasonal series is to be differenced
-	int Q;//size of Seasonal Theta
-	int r;// Number of exogenous variables
-	int M; // M = 0 if mean is 0.0 else M = 1
-	int ncoeff;// Total Number of Coefficients to be estimated
-	double *phi;
-	double *theta;
-	double *PHI;
-	double *THETA;
-	double *exog;
-	double *vcov;// Variance-Covariance Matrix Of length lvcov
-	int lvcov; //length of VCOV
-	double *res;
-	double mean;
-	double var;
-	double loglik;
-	double ic;
-	int retval;
-	int start;
-	int imean;
-	int idrift;
-	int stationary;
-	int seasonal;
-	int Order_max;
-	int p_start;
-	int q_start;
-	int P_start;
-	int Q_start;
-	char information_criteria[10];
-	int stepwise;
-	int num_models;
-	int approximation;
-	int verbose;
-	char test[10];
-	char type[10];
-	char seas[10];
-	double alpha_test;
-	double alpha_seas;
-	double lambda;
-	double sigma2;
-	double aic;
-	double bic;
-	double aicc;
-	double params[0];
-};
-
-
-typedef struct sarimax_set* sarimax_object;
-
-sarimax_object sarimax_init(int p, int d, int q,int P, int D, int Q,int s, int r,int imean, int N);
-
-struct sarimax_set{
-	int N;// length of time series
-	int Nused;//length of time series after differencing, Nused = N - d
-	int method;
-	int optmethod;
-	int p;// size of phi
-	int d;// Number of times the series is to be differenced
-	int q;//size of theta
-	int s;// Seasonality/Period
-	int P;//Size of seasonal phi
-	int D;// The number of times the seasonal series is to be differenced
-	int Q;//size of Seasonal Theta
-	int r;// Number of exogenous variables
-	int M; // M = 0 if mean is 0.0 else M = 1
-	int ncoeff;// Total Number of Coefficients to be estimated
-	double *phi;
-	double *theta;
-	double *PHI;
-	double *THETA;
-	double *exog;
-	double *vcov;// Variance-Covariance Matrix Of length lvcov
-	int lvcov; //length of VCOV
-	double *res;
-	double mean;
-	double var;
-	double loglik;
-	double aic;
-	int retval;
-	int start;
-	int imean;
-	double params[0];
-};
-
-typedef struct arima_set* arima_object;
-
-arima_object arima_init(int p, int d, int q, int N);
-
-struct arima_set{
-	int N;// length of time series
-	int Nused;//length of time series after differencing, Nused = N - d
-	int method;
-	int optmethod;
-	int p;// size of phi
-	int d;// Number of times the series is to be differenced
-	int q;//size of theta
-	int M; // M = 0 if mean is 0.0 else M = 1
-	int ncoeff;// Total Number of Coefficients to be estimated
-	double *phi;
-	double *theta;
-	double *vcov;// Variance-Covariance Matrix Of length lvcov
-	int lvcov; //length of VCOV
-	double *res;
-	double mean;
-	double var;
-	double loglik;
-	double aic;
-	int retval;
-	double params[0];
-};
-
-typedef struct sarima_set* sarima_object;
-
-sarima_object sarima_init(int p, int d, int q,int s,int P,int D,int Q, int N);
-
-struct sarima_set{
-	int N;// length of time series
-	int Nused;//length of time series after differencing, Nused = N - d - s*D
-	int method;
-	int optmethod;
-	int p;// size of phi
-	int d;// Number of times the series is to be differenced
-	int q;//size of theta
-	int s;// Seasonality/Period
-	int P;//Size of seasonal phi
-	int D;// The number of times the seasonal series is to be differenced
-	int Q;//size of Seasonal Theta
-	int M; // M = 0 if mean is 0.0 else M = 1
-	int ncoeff;// Total Number of Coefficients to be estimated
-	double *phi;
-	double *theta;
-	double *PHI;
-	double *THETA;
-	double *vcov;// Variance-Covariance Matrix Of length lvcov
-	int lvcov; //length of VCOV
-	double *res;
-	double mean;
-	double var;
-	double loglik;
-	double aic;
-	int retval;
-	double params[0];
-};
-
-typedef struct ar_set* ar_object;
-
-ar_object ar_init(int method, int N);
-
-struct ar_set{
-	int N;// length of time series
-	int method;
-	int optmethod;// Valid only for MLE estimation
-	int p;// size of phi
-	int order; // order = p
-	int ordermax; // Set Maximum order to be fit
-	double *phi;
-	double *res;
-	double mean;
-	double var;
-	double aic;
-	int retval;
-	double params[0];
-};
-
-void sarimax_exec(sarimax_object obj, double *inp,double *xreg) ;
-
-void arima_exec(arima_object obj, double *x);
-
-void sarima_exec(sarima_object obj, double *x);
-
-void auto_arima_exec(auto_arima_object obj, double *inp,double *xreg);
-
-void ar_exec(ar_object obj, double *inp);
-
-void arima_predict(arima_object obj, double *inp, int L, double *xpred, double *amse);
-
-void sarima_predict(sarima_object obj, double *inp, int L, double *xpred, double *amse);
-
-void sarimax_predict(sarimax_object obj, double *inp, double *xreg, int L,double *newxreg, double *xpred, double *amse);
-
-void auto_arima_predict(auto_arima_object obj, double *inp, double *xreg, int L,double *newxreg, double *xpred, double *amse);
-
-void ar_predict(ar_object obj, double *inp, int L, double *xpred, double *amse);
-
-void ar(double *inp, int N, int p, int method, double *phi,double *var);
-
-void arima_setMethod(arima_object obj, int value);
-
-void sarima_setMethod(sarima_object obj, int value);
-
-void auto_arima_setMethod(auto_arima_object obj, int value);
-
-void sarimax_setMethod(sarimax_object obj, int value);
-
-void arima_setOptMethod(arima_object obj, int value);
-
-void sarima_setOptMethod(sarima_object obj, int value);
-
-void sarimax_setOptMethod(sarimax_object obj, int value);
-
-void auto_arima_setOptMethod(auto_arima_object obj, int value);
-
-void arima_vcov(arima_object obj, double *vcov);
-
-void sarima_vcov(sarima_object obj, double *vcov);
-
-void sarimax_vcov(sarimax_object obj, double *vcov);
-
-void auto_arima_setApproximation(auto_arima_object obj, int approximation);
-
-void auto_arima_setStepwise(auto_arima_object obj, int stepwise);
-
-void auto_arima_setStationary(auto_arima_object obj, int stationary);
-
-void auto_arima_setSeasonal(auto_arima_object obj, int seasonal);
-
-void auto_arima_setStationarityParameters(auto_arima_object obj,const char *test, double alpha, const char *type);
-
-void auto_arima_setSeasonalParameters(auto_arima_object obj,const char *test, double alpha);
-
-void auto_arima_setVerbose(auto_arima_object obj,int verbose);
-
-void arima_summary(arima_object obj);
-
-void sarima_summary(sarima_object obj);
-
-void sarimax_summary(sarimax_object obj);
-
-void auto_arima_summary(auto_arima_object obj);
-
-int ar_estimate(double *x, int N, int method);
-
-void ar_summary(ar_object obj);
-
-void model_estimate(double *x, int N, int d, int pmax, int h);
-
-void pacf(double* vec, int N, double* par, int M);
-
-void pacf_opt(double* vec, int N, int method, double* par, int M);
-
-void acvf(double* vec, int N, double* par, int M);
-
-void acvf_opt(double* vec, int N, int method, double* par, int M);
-
-void acvf2acf(double *acf, int M);
-
-void arima_free(arima_object object);
-
-void sarima_free(sarima_object object);
-
-void sarimax_free(sarimax_object object);
-
-void auto_arima_free(auto_arima_object object);
-
-void ar_free(ar_object object);
-
-// Yule-Walker, Burg and Hannan Rissanen Algorithms for Initial Parameter Estimation
-
-void yw(double *x, int N, int p, double *phi, double *var);
-
-void burg(double *x, int N, int p, double *phi, double *var);
-
-void hr(double *x, int N, int p, int q, double *phi, double *theta, double *var);
-
-
-#ifdef __cplusplus
-}
-#endif
-
-
-#endif /* CTSA_H_ */
-</code></pre>
 <h2 id="change-log"><a class="header" href="#change-log">Change log</a></h2>
 <pre><code class="language-markdown">
 2021-07-06  zoziha  zuo.zhihua@qq.com
