--- a/stats/acf.html
+++ b/stats/acf.html
@@ -155,7 +155,7 @@
 <h2 id="class"><a class="header" href="#class">Class</a></h2>
 <p>Impure subroutine.</p>
 <h2 id="synatx"><a class="header" href="#synatx">Synatx</a></h2>
-<pre><code class="language-fortran">call fortsa_stats:acvf(vec, n, par, m)
+<pre><code class="language-fortran">call fortsa_stats_m:acvf(vec, n, par, m)
 </code></pre>
 <h2 id="arguments"><a class="header" href="#arguments">Arguments</a></h2>
 <p><code>vec</code>: Shall be a <code>real(c_double)</code> and <code>rank-1</code> array.
@@ -172,7 +172,7 @@ Method 1 : FFT based Method. Use it if data length is large.</p>
 <h2 id="class-1"><a class="header" href="#class-1">Class</a></h2>
 <p>Impure subroutine.</p>
 <h2 id="synatx-1"><a class="header" href="#synatx-1">Synatx</a></h2>
-<pre><code class="language-fortran">call fortsa_stats:acvf_opt(vec, n, method, par, m)
+<pre><code class="language-fortran">call fortsa_stats_m:acvf_opt(vec, n, method, par, m)
 </code></pre>
 <h2 id="arguments-1"><a class="header" href="#arguments-1">Arguments</a></h2>
 <p><code>vec</code>: Shall be a <code>real(c_double)</code> and <code>rank-1</code> array.
@@ -190,7 +190,7 @@ This argument is <code>value</code> and <code>intent(in)</code>.
 <h2 id="class-2"><a class="header" href="#class-2">Class</a></h2>
 <p>Pure subroutine.</p>
 <h2 id="synatx-2"><a class="header" href="#synatx-2">Synatx</a></h2>
-<pre><code class="language-fortran">call fortsa_stats:acvf2acf(acf, m)
+<pre><code class="language-fortran">call fortsa_stats_m:acvf2acf(acf, m)
 </code></pre>
 <h2 id="arguments-2"><a class="header" href="#arguments-2">Arguments</a></h2>
 <p><code>acf</code>: Shall be a <code>real(c_double)</code> and <code>rank-1</code> array.
